examples/type_system/failing/09_compile_typed_call_return_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn make_label() -> String {
    "label"
}

let n: Int = make_label()
